# openapi/openapi.yaml
@@ -54,6 +54,10 @@ paths:
     $ref: './paths/contacts.yaml#/~1api~1contacts.import'
   /api/contacts.delete:
     $ref: './paths/contacts.yaml#/~1api~1contacts.delete'
+  /api/contacts.tag:
+    $ref: './paths/contacts.yaml#/~1api~1contacts.tag'
+  /api/contacts.untag:
+    $ref: './paths/contacts.yaml#/~1api~1contacts.untag'
   /api/contactLists.updateStatus:
     $ref: './paths/contact-lists.yaml#/~1api~1contactLists.updateStatus'
   /api/broadcasts.list:
